redacted and TODO the wiki

--- a/app/wiki/templates/wiki/Black Gods.html
+++ b/app/wiki/templates/wiki/Black Gods.html
@@ -17,5 +17,4 @@ The Black Gods also known as the Great Fiends or The Wicked Nine. They are a col
 <tr class="wikidpad"><td class="wikidpad">Ataxia                      </td><td class="wikidpad"> Chaos</td></tr>
 </table>
  <br class="wikidpad" />
-Although they are referred to by mortals as a group and rarely even a plotting body, these entities do not work together. The Archdevils are orderly beings, and they will work with each other, but only as far as a king of one nation would with another. The Demon Lords are pretty much in perpetual war with everything all the time, while their goals or enemies may align they do not normally even consider forming a coalition. Ataxia is obviously the odd one out, as Ataxia is not a extraplanar being, Ataxia is an Eternal and poses power beyond all of the other Great Fiends combined.<br class="wikidpad" />
-    {% endblock content%}
+Although they are referred to by mortals as a group and rarely even a plotting body, these entities do not work together. The Archdevils are orderly beings and work together but only within themselves. The Demon Lords are pretty much in perpetual war with everything all the time, while their goals or enemies may align they do not even consider forming a coalition.     {% endblock content%}
