--- a/app/wiki/templates/wiki/Cosmology.html
+++ b/app/wiki/templates/wiki/Cosmology.html
@@ -9,5 +9,5 @@
 <span class="wikidpad wiki-link"><a href="Jotunheim.html" class="wikidpad">Jotunheim</a></span><br class="wikidpad" />
 <span class="wikidpad wiki-link"><a href="Purgatus.html" class="wikidpad">Purgatus</a></span><br class="wikidpad" />
 <span class="wikidpad wiki-link"><a href="Sordidus.html" class="wikidpad">Sordidus</a></span><br class="wikidpad" />
-<br class="wikidpad" />
+<span class="wikidpad wiki-link"><a href="Astral%20Sea.html" class="wikidpad">Astral Sea</a></span><br class="wikidpad" />
     {% endblock content%}
