--- a/app/wiki/templates/wiki/Frond.html
+++ b/app/wiki/templates/wiki/Frond.html
@@ -11,9 +11,9 @@ A rare and difficult to grow species of fern coming from Gloam Carr, the fronds 
 <br class="wikidpad" />
 The quality/sub-type of a frond is determined by the spores on its underside. High quality frond has spores that are dark brown rather the less mature reddish-brown and the spores spread in a thin coat across the entire underside instead of small clumps. While the spores are needed to assess the frond, if not removed before consumption they create a very poor taste and nullify the psychoactive properties. <br class="wikidpad" />
 <br class="wikidpad" />
-Frond is considered by most to be safe because it has no dosage limit, meaning a person cannot overdose using only frond. Prolonged use at high doses builds tolerance, but at no point develops into dependency. <br class="wikidpad" />
+Frond is considered by most to be safe, but if large amounts are used at once it can lead a comatose state.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h1383" class="wikidpad"></a><h4 class="wikidpad heading-level4">Mechanical Effects</h4>
+<a name=".h1280" class="wikidpad"></a><h4 class="wikidpad heading-level4">Mechanical Effects</h4>
 smoking activation delay: 10 minutes <br class="wikidpad" />
 tea activation delay: 40 minutes<br class="wikidpad" />
 <br class="wikidpad" />
