--- a/app/wiki/templates/wiki/Gnome.html
+++ b/app/wiki/templates/wiki/Gnome.html
@@ -4,13 +4,13 @@
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Gnome</h2>
 <a name=".h10" class="wikidpad"></a><h3 class="wikidpad heading-level3">Construction</h3>
 <a name=".h28" class="wikidpad"></a><h6 class="wikidpad heading-level6">üstünite  </h6>
-An extremely rare ore that is processed into a copper-adamantium alloy that is used for the chasis around the gnome's memory stack. This rare alloy can only be formed at üstünde ölü yakma, mostly commonly found in graves of copper wyrms.<br class="wikidpad" />
+An extremely rare ore that is processed into a copper-adamantium alloy that is used for the chasis around the gnome's memory stack. This rare alloy can only be formed at <span class="wikidpad wiki-link"><a href="Yetkilii%20Dictionary.html" class="wikidpad">üstünde ölü yakma</a></span> for copper dragons.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h285" class="wikidpad"></a><h6 class="wikidpad heading-level6">Liquid Butane</h6>
-Known to Orthosians as tetra igne hydros, butane is an elusive substance famous for catching fire as a liquid. TIH is an important part of a gnome's circulatory system and muscle operation.<br class="wikidpad" />
+<a name=".h277" class="wikidpad"></a><h6 class="wikidpad heading-level6">Liquid Butane</h6>
+Known to Orthosians as tetra igne hydros (████████) is an elusive substance famous for catching fire as a liquid. TIH is an important part of a gnome's circulatory system and muscle operation.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h497" class="wikidpad"></a><h6 class="wikidpad heading-level6">Tensile Cord</h6>
+<a name=".h492" class="wikidpad"></a><h6 class="wikidpad heading-level6">Tensile Cord</h6>
 A strong, flexible cord is required for the gnome's ligaments. Another important quality of these cords is to have high enchantability, which due to being inversely corelated with how enchanted a material is the more mundane the better. There are several common options including: a specific plant fiber from a mundane crop, harvested organic ligaments, rubber, or drider silk. <br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h897" class="wikidpad"></a><h6 class="wikidpad heading-level6">Narisium</h6>
+<a name=".h892" class="wikidpad"></a><h6 class="wikidpad heading-level6">Narisium</h6>
     {% endblock content%}
