--- a/app/wiki/templates/wiki/Magic & Materials.html
+++ b/app/wiki/templates/wiki/Magic & Materials.html
@@ -17,10 +17,10 @@ measured as percentage of magic output from material compared to magic input, so
 <br class="wikidpad" />
 <br class="wikidpad" />
 <b class="wikidpad">Threading</b><br class="wikidpad" />
-Permanent magic and enchanted items are made from a process called threading (colloquial called weaving), where an arcanist pulls threads of energy from a complicated, resource intensive machine. Not only are the machines very rare, they require great magical prowess to operate. The initial “pierce” when a thread is drawn out of ether is physically taxing, and keeping the thread stable for as long as possible is a difficult skill but essential to not prolonging the threading process. Threading takes a very long time to complete even a small task because it generates huge amounts of tar. The best arcanists were able to develop a technique of multithreading so that one person could safely pierce and pull on several threads simultaneously. At some point in the future hyperthreading will be developed, where an arcanist makes a larger pierce that they can pull several threads out of.<br class="wikidpad" />
+Permanent magic and enchanted items are made from a process called threading (colloquial called weaving), where an arcanist pulls threads of energy from a complicated, resource intensive machine. Not only are the machines very rare, they require great magical prowess to operate. The initial “pierce” when a thread is drawn out of ether is physically taxing, and keeping the thread stable for as long as possible is a difficult skill but essential to not prolonging the threading process. Threading takes a very long time to complete even a small task because it generates huge amounts of tar. The best arcanists were able to develop a technique of multithreading so that one person could safely pierce and pull on several threads simultaneously. ███ ███████ ██████████████ ███ ██ ██████████ █████ ██ ████████ █████ █ ██████ ██████ ████ ████ ███ ████ ███████ ███████ ██ ████ ███ ████ ███████████ ███████<br class="wikidpad" />
 <br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h1845" class="wikidpad"></a><h5 class="wikidpad heading-level5">Arcane Fields of Study</h5>
+<a name=".h1857" class="wikidpad"></a><h5 class="wikidpad heading-level5">Arcane Fields of Study</h5>
 <span class="wikidpad wiki-link"><a href="Arcanomerology.html" class="wikidpad">Arcanomerology</a></span><br class="wikidpad" />
 <br class="wikidpad" />
 <span class="wikidpad wiki-link"><a href="Qayamancy.html" class="wikidpad">Qayamancy</a></span><br class="wikidpad" />
@@ -28,7 +28,7 @@ The study study of the magical attributes of rocks, gems, and metals.<br class="
 <br class="wikidpad" />
 Arcanogeometric Analysis: The study of how shapes influence magic.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h2043" class="wikidpad"></a><h5 class="wikidpad heading-level5">Other</h5>
+<a name=".h2055" class="wikidpad"></a><h5 class="wikidpad heading-level5">Other</h5>
 <span class="wikidpad wiki-link"><a href="Drugs.html" class="wikidpad">Drugs</a></span><br class="wikidpad" />
 <br class="wikidpad" />
 <span class="wikidpad wiki-link"><a href="Artifacts.html" class="wikidpad">Artifacts</a></span><br class="wikidpad" />
