--- a/app/wiki/templates/wiki/Paradox Order.html
+++ b/app/wiki/templates/wiki/Paradox Order.html
@@ -2,4 +2,4 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Factions.html" class="wikidpad">Factions</a></span> | <span class="wikidpad parent-node"><a href="Locations.html" class="wikidpad">Locations</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Paradox Order</h2>
-    {% endblock content%}
+TODO work with marc on this    {% endblock content%}
