--- a/app/wiki/templates/wiki/Arcanomerology.html
+++ b/app/wiki/templates/wiki/Arcanomerology.html
@@ -2,7 +2,7 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Classes.html" class="wikidpad">Classes</a></span> | <span class="wikidpad parent-node"><a href="Magic%20%26%20Materials.html" class="wikidpad">Magic & Materials</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Arcanomerology</h2>
-Arcane material science and chemistry, in consrast to alchemy involves the direct application of magic to alter or combine substances. One of the most influential figures in Orthosian arcanomerology was Archmage Hazib Athahabi (the golden).<br class="wikidpad" />
+Arcane material science and chemistry, in consrast to alchemy involves the direct application of magic to alter or combine substances. One of the most influential figures in Orthosian arcanomerology was Archsage Hazib Athahabi (the golden).<br class="wikidpad" />
 <br class="wikidpad" />
 <a name=".h261" class="wikidpad"></a><h4 class="wikidpad heading-level4">Neon-Hexa-Matrix</h4>
 This arcane material is used to line potion bottles as a long term stabilization agent. The powder is made by pulverizing gem-moss from <span class="wikidpad wiki-link"><a href="Gloam%20Carr.html" class="wikidpad">Gloam Carr</a></span>. This powder is then combined with neon at 100 atmospheres of pressure at extremely cold temperature. Cobalt dragon breath is one of the few things that can get the powder into ints crystaline strucure.<br class="wikidpad" />
