--- a/app/wiki/templates/wiki/Athemari.html
+++ b/app/wiki/templates/wiki/Athemari.html
@@ -1,6 +1,5 @@
 {% extends "wiki/wiki-base.html" %}{% block content %}
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Dulane%20Empire.html" class="wikidpad">Dulane Empire</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
-<a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Falls of Thandorodrim</h2>
-TODO<br class="wikidpad" />
-an ancient jot structure turned dwarven city    {% endblock content%}
+<a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Athemari</h2>
+TODO    {% endblock content%}
