--- a/app/wiki/templates/wiki/Clergy Hierarchy.html
+++ b/app/wiki/templates/wiki/Clergy Hierarchy.html
@@ -4,7 +4,7 @@
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Clergy Hierarchy</h2>
 These terms are genearly ordered by power-level, speaker being an exception. Level ranges are formated as AoG/PC.<br class="wikidpad" />
 <br class="wikidpad" />
-<b class="wikidpad">Accolyte:</b> The lowest level follower of a faith, post-calamity may not even have access to divine prayer. Accolytes are, by definition, not notable usually playing a background part in the story of priests, clerics, and bishops. 1-3/0-1.<br class="wikidpad" />
+<b class="wikidpad">Accolyte:</b> The lowest level follower of a faith, post-calamity may not even have access to divine prayer. Accolytes are, by definition, not notable and usually playing a background part in the story of priests, clerics, and bishops. 1-3/0-1.<br class="wikidpad" />
 <br class="wikidpad" />
 <b class="wikidpad">Deacon:</b> <br class="wikidpad" />
 <br class="wikidpad" />
