--- a/app/wiki/templates/wiki/Cleric Table.html
+++ b/app/wiki/templates/wiki/Cleric Table.html
@@ -2,6 +2,7 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Theology.html" class="wikidpad">Theology</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Cleric Table</h2>
+TODO marc god review<br class="wikidpad" />
 <table border="2" class="wikidpad">
 <tr class="wikidpad"><td class="wikidpad"><b class="wikidpad">Cleric Domain</b></td><td class="wikidpad">	<b class="wikidpad">Gods</b></td></tr>
 <tr class="wikidpad"><td class="wikidpad">Ambition</td><td class="wikidpad">	Ur’reli, Tonk, Ataxia</td></tr>
