--- a/app/wiki/templates/wiki/Hydra Ex Alis.html
+++ b/app/wiki/templates/wiki/Hydra Ex Alis.html
@@ -2,15 +2,16 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Factions.html" class="wikidpad">Factions</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Hydra Ex Alis</h2>
-A cult focused on the return of the Hydra to Mortus. Their main task is to seek out and destroy the “Heads of the Hydra”. These targets are most often powerful individuals but can also be important locations or even concepts. The destruction of these targets will lead to the Hydra being freed from its prison in the Shure Luck Sea. The founder of Hydra Ex Allis was an infernal warlock, who bargained to place the Hydra under the control of their patron if they successful her.<br class="wikidpad" />
+TODO slight hydra lore review<br class="wikidpad" />
+A cult focused on the return of the Hydra to Mortus. Their main task is to seek out and destroy the “Heads of the Hydra”. These targets are most often powerful individuals but can also be important locations or even concepts. The destruction of these targets will lead to the Hydra being freed from its prison in the Shure Luck Sea. The founder of Hydra Ex Allis was an █████████ ████████ ███ █████████ ██ █████ ███ █████ █████ ███ ███████ ██ █████ ██████ ██ ████ ██████████ █████<br class="wikidpad" />
 Members of Hydra ex Alis who have cut down a head of the Hydra earn the title of “beheader” followed by the number of heads they have cut. Once they have earned this title they can receive the “Hydra Liberatae” tattoo which can be used to trigger an explosion centered on the wearer.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h782" class="wikidpad"></a><h5 class="wikidpad heading-level5">Beheader 3rd Degree</h5>
-<a name=".h809" class="wikidpad"></a><h5 class="wikidpad heading-level5">Beheader 1st Degree</h5>
-Kalabanzar, a dragon mutant from Gazan who is accompanied by his chronicler Ukata. PC -34<br class="wikidpad" />
+<a name=".h814" class="wikidpad"></a><h5 class="wikidpad heading-level5">Beheader 3rd Degree</h5>
+<a name=".h841" class="wikidpad"></a><h5 class="wikidpad heading-level5">Beheader 1st Degree</h5>
+Kalabanzar, a dragon mutant from Gazan who is accompanied by his chronicler Ukata. 342 PC<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h926" class="wikidpad"></a><h4 class="wikidpad heading-level4">Machina Exspiravit</h4>
-Machina Exspiravit is a subcult within Hydra Ex Alis dedicated to reincarnating the spirit of Vahşi, a long-dead titanium wyrm in a mechanical body. This branch of Hydra Ex Alis is rather separate from the rest of the cult and much more in touch with their infernal connections. Machina Exspiravit disciples tend to be more fluent in Infernal than draconic, and are focused on the recovery of <span class="wikidpad wiki-link"><a href="Age%20of%20Grandeur.html" class="wikidpad">Age of Grandeur</a></span> arcanotech.  <br class="wikidpad" />
+<a name=".h958" class="wikidpad"></a><h4 class="wikidpad heading-level4">Machina Exspiravit</h4>
+Machina Exspiravit is a subcult within Hydra Ex Alis dedicated to reincarnating the spirit of Vahşi, a long-dead titanium wyrm in a mechanical body. This branch of Hydra Ex Alis is rather separate from the rest of the cult and much more in touch with ██████ ████████ ████████████ ███████ ██████████ █████████ ████ ██ ██ ████ ██████ ██ ████████ ████ ██████████ and are focused on the recovery of <span class="wikidpad wiki-link"><a href="Age%20of%20Grandeur.html" class="wikidpad">Age of Grandeur</a></span> arcanotech.  <br class="wikidpad" />
 <br class="wikidpad" />
-The chassis for mecha-vahşi was completed in an underground hangar after the end of The Necro War but before the Great Calamity. The major remaining components, which Machina Exspiravit quest to complete, are the flight-system and breath weapon engine. Both of these two incomplete systems require devil cores to serve as immense, renewable power sources.<br class="wikidpad" />
+The chassis for mecha-vahşi was completed in an underground hangar after the end of The Necro War but before the Great Calamity. The major remaining components, which Machina Exspiravit quest to complete, are the flight-system and breath weapon engine. Both of these two incomplete systems require ██████ █████ █to serve as immense, renewable power sources.<br class="wikidpad" />
     {% endblock content%}
