--- a/app/wiki/templates/wiki/Quubea.html
+++ b/app/wiki/templates/wiki/Quubea.html
@@ -2,4 +2,5 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Factions.html" class="wikidpad">Factions</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Quubea</h2>
+TODO<br class="wikidpad" />
 The history of Quubea as recorded by archivist J-Mi    {% endblock content%}
