--- a/app/wiki/templates/wiki/Sparkling Empress.html
+++ b/app/wiki/templates/wiki/Sparkling Empress.html
@@ -2,4 +2,4 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Artifacts.html" class="wikidpad">Artifacts</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Sparkling Empress</h2>
-    {% endblock content%}
+TODO    {% endblock content%}
