--- a/app/wiki/templates/wiki/Tiering.html
+++ b/app/wiki/templates/wiki/Tiering.html
@@ -2,18 +2,18 @@
 
 <span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Nafarra.html" class="wikidpad">Nafarra</a></span> | <span class="wikidpad parent-node"><a href="Theology.html" class="wikidpad">Theology</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Tiering</h2>
-<a name=".h12" class="wikidpad"></a><h1 class="wikidpad heading-level1">This page is under lore review</h1>
+TODO major lore review and marc god intergration<br class="wikidpad" />
 The gods come in three tiers of concept and power. The highest are the three Eternals: Quultar, Ataxia, Empyreon. Quultar is the Prime Eternal and creator of all that is native to the Manifold that is Ethos. The second tier are the Gods of Essence, they represent the emotions and concepts that exist in all peoples, in addition to the elements of the natural world. The lowest tier, but often most followed in day-to-day are the Gods of Dominion. They are the embodiments of the actions the varied people perform or structures of culture and governance.<br class="wikidpad" />
 The Essentials of nature: Qine, Luft, Zurchoz, Fiel, Bauz, and Hule are the first giants called the prime titans and are worshipped as gods by both giants and mortals.<br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h769" class="wikidpad"></a><h1 class="wikidpad heading-level1">Eternals</h1>
+<a name=".h785" class="wikidpad"></a><h1 class="wikidpad heading-level1">Eternals</h1>
 <table border="2" class="wikidpad">
 <tr class="wikidpad"><td class="wikidpad">Quultar </td><td class="wikidpad"> Creation, cosmos, magic</td></tr>
 <tr class="wikidpad"><td class="wikidpad">Ataxia </td><td class="wikidpad"> Chaos</td></tr>
 <tr class="wikidpad"><td class="wikidpad">Empyreon </td><td class="wikidpad"> Order</td></tr>
 </table>
 <br class="wikidpad" />
-<a name=".h854" class="wikidpad"></a><h1 class="wikidpad heading-level1">Essence/Essentials</h1>
+<a name=".h870" class="wikidpad"></a><h1 class="wikidpad heading-level1">Essence/Essentials</h1>
 -&lt;&lt;|<br class="wikidpad" />
 <b class="wikidpad">Name</b>|<b class="wikidpad">Gender</b>|<b class="wikidpad">Domain</b><br class="wikidpad" />
 Rico|    M|	Knowledge<br class="wikidpad" />
@@ -27,7 +27,7 @@ Bauz|	M|	Underground<br class="wikidpad" />
 Fiel|	F|  Mountains<br class="wikidpad" />
 Zurchoz|	F|	Fire<br class="wikidpad" />
 &gt;&gt;<br class="wikidpad" />
-<a name=".h1159" class="wikidpad"></a><h1 class="wikidpad heading-level1">Dominion</h1>
+<a name=".h1175" class="wikidpad"></a><h1 class="wikidpad heading-level1">Dominion</h1>
 <table border="2" class="wikidpad">
 <tr class="wikidpad"><td class="wikidpad"><b class="wikidpad">Name</b></td><td class="wikidpad"><b class="wikidpad">Gender</b></td><td class="wikidpad"><b class="wikidpad">Domain</b></td></tr>
 <tr class="wikidpad"><td class="wikidpad">Tonk</td><td class="wikidpad">	F</td><td class="wikidpad">	War</td></tr>
