--- a/app/wiki/templates/wiki/Yetkilii Dictionary.html
+++ b/app/wiki/templates/wiki/Yetkilii Dictionary.html
@@ -1,6 +1,6 @@
 {% extends "wiki/wiki-base.html" %}{% block content %}
 
-<span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Yetkilii.html" class="wikidpad">Yetkilii</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
+<span class="wikidpad parent-nodes">parent nodes: <span class="wikidpad parent-node"><a href="Gnome.html" class="wikidpad">Gnome</a></span> | <span class="wikidpad parent-node"><a href="Yetkilii.html" class="wikidpad">Yetkilii</a></span><br class="wikidpad" /><br class="wikidpad" /></span>
 <a name=".h0" class="wikidpad"></a><h2 class="wikidpad heading-level2">Yetkilii Dictionary</h2>
 <a name=".h24" class="wikidpad"></a><h4 class="wikidpad heading-level4">Word Construction</h4>
 █ ███ ██████████████████<br class="wikidpad" />
