--- a/app/wiki/templates/wiki/wiki-base.html
+++ b/app/wiki/templates/wiki/wiki-base.html
@@ -31,10 +31,11 @@
                         <a class="nav-item nav-link" href="{% url "wiki-random" %}">Random Article</a>
                         </div>
                         <!-- Navbar Right Side -->
-                        <div class="navbar-nav">
-                           <form class="nav-item"  action="{% url "wiki-search-articles" %}">{% csrf_token %}
-                                <input class="nav-item form-control me-2" type="search" placeholder="Search">
-                                <button class="nav-item btn btn-outline-secondary" type="submit">Search</b>
+                        <div class="navbar-nav mr-4">
+                           <form class="form-inline  my-2 my-lg-0"  method="POST" action="search">
+                                {% csrf_token %}
+                                <input class="form-control mr-sm-2" name="search" type="search" placeholder="Search">
+                                <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</b>
                            </form>
                         </div>
                     </div>
