redaction finishing touches

--- a/app/wiki/templates/wiki/Dulane Empire.html
+++ b/app/wiki/templates/wiki/Dulane Empire.html
@@ -20,29 +20,19 @@ From the solidification of the Empire in 196 AOG, there have been 22 emperors fo
 <tr class="wikidpad"><td class="wikidpad">Klandale	        </td><td class="wikidpad">Jaslene Kosmach: elf</td></tr>
 </table>
 <br class="wikidpad" />
+<a name=".h848" class="wikidpad"></a><h3 class="wikidpad heading-level3">History</h3>
+<a name=".h860" class="wikidpad"></a><h4 class="wikidpad heading-level4">Formation of the Empire</h4>
 <br class="wikidpad" />
 <br class="wikidpad" />
-<br class="wikidpad" />
-<a name=".h851" class="wikidpad"></a><h4 class="wikidpad heading-level4">Office of Magical Research</h4>
-<span class="wikidpad wiki-link"><a href="Project%20Citadel.html" class="wikidpad">Project Citadel</a></span><br class="wikidpad" />
-<span class="wikidpad wiki-link"><a href="Project%20Monolith.html" class="wikidpad">Project Monolith</a></span><br class="wikidpad" />
-<br class="wikidpad" />
-<a name=".h921" class="wikidpad"></a><h3 class="wikidpad heading-level3">Culture</h3>
+<a name=".h892" class="wikidpad"></a><h3 class="wikidpad heading-level3">Culture</h3>
 <span class="wikidpad wiki-link"><a href="Orthosian%20Sayings.html" class="wikidpad">Orthosian Sayings</a></span><br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h953" class="wikidpad"></a><h4 class="wikidpad heading-level4">Office of Domestic Affairs</h4>
-Project Cool Breeze was a series of exploratory missions in the late half of the Jones dynasty, with the goal of creating overseas colonies for imperial elements to flee the wars bearing down on them. Although, ship building technology had been developed sufficiently, deep-ocean traversal had been near impossible for centuries due to a combination of three factors; oceanic monstrosities, arcano-oceanic forbiddance thresholding, and constellation roaming. These factors made the journey not only dangerous but practically impossible to navigate on the open ocean far from coastlines.<br class="wikidpad" />
-<br class="wikidpad" />
-Through years of research, development, and discovery the Imperial Office of Domestic Affairs found solutions to the two more important issues. First came a way of warding off creatures of the deep such as dragon turtles and levithans. From the wisdom of the merfolk of <span class="wikidpad wiki-link"><a href="Athemari.html" class="wikidpad">Athemari</a></span>, sages captured calls of the <span class="wikidpad wiki-link"><a href="Athemari.html#Eeldilon" class="wikidpad">Eeldilon</a></span>, then arcanists created machines to be installed in the hulls of ships to create their sounds. The second key discovery was from an archelogical site within the <span class="wikidpad wiki-link"><a href="Falls%20of%20Thandorodrim.html" class="wikidpad">Falls of Thandorodrim</a></span>, where a map showed megastructures the ancient jot built to connect Orthos to different continents. Once the maps were translated to the geography of the time, a definite route was formed. Despite this, navigation was still a signifcant peril due to arcano-oceanic forbiddance thresholding. Using magic to ping off of beaconesque formations within the submerged structure ships could make sure to follow the ancient route the entire distance, but if there was a discontinuity in the structure or if the ship got too far off course, it would have to rely on conventional solar navigation with a good deal of luck to find the correct bearing once more.<br class="wikidpad" />
-<br class="wikidpad" />
-The distance a spell can travel in kilometers over open ocean is equal to 3(p*log3(p)+2), where p is the level of the spell.<br class="wikidpad" />
 <br class="wikidpad" />
 <br class="wikidpad" />
-<a name=".h2876" class="wikidpad"></a><h4 class="wikidpad heading-level4">Currency</h4>
+<a name=".h926" class="wikidpad"></a><h4 class="wikidpad heading-level4">Currency</h4>
 TODO dust and new material worths<br class="wikidpad" />
-The value ratios of raw materials is as follows: copper = 4<b class="wikidpad">tin, silver = 12</b>copper, gold = 20<b class="wikidpad">silver, adamantium = 5</b>gold, platinum = 10*gold.<br class="wikidpad" />
+The value ratios of raw materials is as follows: copper = 4*tin, silver = 12*copper, gold = 20*silver, adamantium = 5*gold, platinum = 10*gold.<br class="wikidpad" />
 Tin<br class="wikidpad" />
-<br class="wikidpad" />
 <br class="wikidpad" />
 As part of a nonaggression pact between the DE and the Throngdorians, the Emperor agreed to incorporate  majority of their coinage into  the imperial system<br class="wikidpad" />
 Tin<br class="wikidpad" />
@@ -61,4 +51,18 @@ Adamantium<br class="wikidpad" />
 Ram = 3 sel, very rare not in mint<br class="wikidpad" />
 Plat<br class="wikidpad" />
 Dragon = 10 sel, rare not in mint, used to be 100 sel but since striking is less known the value has gone down since AOG<br class="wikidpad" />
+<br class="wikidpad" />
+<br class="wikidpad" />
+<a name=".h1685" class="wikidpad"></a><h3 class="wikidpad heading-level3">Institutions</h3>
+<a name=".h1703" class="wikidpad"></a><h4 class="wikidpad heading-level4">Office of Magical Research</h4>
+<span class="wikidpad wiki-link"><a href="Project%20Citadel.html" class="wikidpad">Project Citadel</a></span><br class="wikidpad" />
+<span class="wikidpad wiki-link"><a href="Project%20Monolith.html" class="wikidpad">Project Monolith</a></span><br class="wikidpad" />
+<br class="wikidpad" />
+<a name=".h1773" class="wikidpad"></a><h4 class="wikidpad heading-level4">Office of Domestic Affairs</h4>
+Project Cool Breeze was a series of exploratory missions in the late half of the Jones dynasty, with the goal of creating overseas colonies for imperial elements to flee the wars bearing down on them. Although, ship building technology had been developed sufficiently, deep-ocean traversal had been near impossible for centuries due to a combination of three factors; oceanic monstrosities, arcano-oceanic forbiddance thresholding, and constellation roaming. These factors made the journey not only dangerous but practically impossible to navigate on the open ocean far from coastlines.<br class="wikidpad" />
+<br class="wikidpad" />
+Through years of research, development, and discovery the Imperial Office of Domestic Affairs found solutions to the two more important issues. First came a way of warding off creatures of the deep such as dragon turtles and levithans. From the wisdom of the merfolk of <span class="wikidpad wiki-link"><a href="Athemari.html" class="wikidpad">Athemari</a></span>, sages captured calls of the <span class="wikidpad wiki-link"><a href="Athemari.html#Eeldilon" class="wikidpad">Eeldilon</a></span>, then arcanists created machines to be installed in the hulls of ships to create their sounds. The second key discovery was from an archelogical site within the <span class="wikidpad wiki-link"><a href="Falls%20of%20Thandorodrim.html" class="wikidpad">Falls of Thandorodrim</a></span>, where a map showed megastructures the ancient jot built to connect Orthos to different continents. Once the maps were translated to the geography of the time, a definite route was formed. Despite this, navigation was still a signifcant peril due to arcano-oceanic forbiddance thresholding. Using magic to ping off of beaconesque formations within the submerged structure ships could make sure to follow the ancient route the entire distance, but if there was a discontinuity in the structure or if the ship got too far off course, it would have to rely on conventional solar navigation with a good deal of luck to find the correct bearing once more.<br class="wikidpad" />
+<br class="wikidpad" />
+The distance a spell can travel in kilometers over open ocean is equal to 3(p*log3(p)+2), where p is the level of the spell.<br class="wikidpad" />
+<br class="wikidpad" />
     {% endblock content %}
