--- a/app/wiki/templates/wiki/Yetkilii.html
+++ b/app/wiki/templates/wiki/Yetkilii.html
@@ -30,7 +30,7 @@ TODO names of varieties<br class="wikidpad" />
 <br class="wikidpad" />
 <b class="wikidpad">Iron:</b> Iron dragons start looking like pure iron, but as they age their skin and scales slowly oxidize, becoming a rusty-red color, usually being called red dragons. These are classic fire breathing dragons. They have 4 lizard-like legs, long tail and neck, and wide wings.<br class="wikidpad" />
 <br class="wikidpad" />
-<b class="wikidpad">Carbon:</b> TODO<br class="wikidpad" />
+<b class="wikidpad">Carbon:</b> Dirge Dragon, collect bones of dragons<br class="wikidpad" />
 <br class="wikidpad" />
 <b class="wikidpad">Bismuth:</b> TODO<br class="wikidpad" />
 <br class="wikidpad" />
